fixed broken test

--- a/output/team.html
+++ b/output/team.html
@@ -14,48 +14,15 @@
         <script src="./assets/scripts/script.js"></script>
     </head><nav class="navbar navbar-light bg-info">
     <span class="navbar-brand mb-0 h1 text-white mx-auto">My Team</span>
-  </nav> <div id="manager" class="card float-left m-4" style="width: 18rem;">
+  </nav> <div id="engineer" class="card float-left m-4" style="width: 18rem;">
     <div class="card-body bg-info text-white rounded">
-      <h5 class="card-title">Lynn </h5>
-      <p class="card-text"><span><i class="fas fa-mug-hot p-2"></i></span>Manager</p>
-    </div>
-    <ul class="list-group list-group-flush p-4">
-      <li class="list-group-item">ID:<span class = "text-primary"> 34567</span></li>
-      <li class="list-group-item">Email:<span class = "text-primary"> email@email.com</span></li>
-      <li class="list-group-item">Office Number:<span class = "text-primary"> 44</span></li>
-    </ul>
-    </div>
-  </div><div id="intern" class="card float-left m-4" style="width: 18rem;">
-    <div class="card-body bg-info text-white rounded">
-      <h5 class="card-title">joe</h5>
-      <p class="card-text"><span><i class="fas fa-user-graduate p-2"></i></span>Intern</p>
-    </div>
-    <ul class="list-group list-group-flush p-4">
-      <li class="list-group-item">ID:<span class = "text-primary"> 3455 </span></li>
-      <li class="list-group-item">Email:<span class = "text-primary"> email@joe</span></li>
-      <li class="list-group-item">School:<span class = "text-primary"> test school</span></li>
-    </ul>
-    </div>
-  </div><div id="engineer" class="card float-left m-4" style="width: 18rem;">
-    <div class="card-body bg-info text-white rounded">
-      <h5 class="card-title">nick</h5>
+      <h5 class="card-title">lynn</h5>
       <p class="card-text"><span><i class="fab fa-github p-2"></i></span>Engineer</p>
     </div>
     <ul class="list-group list-group-flush p-4">
-      <li class="list-group-item">ID:<span class = "text-primary"> 4567</span></li>
-      <li class="list-group-item">Email:<span class = "text-primary"> email@email</span></li>
-      <li class="list-group-item">GitHub User ID:<span class = "text-primary"> user4444</span></li>
-    </ul>
-    </div>
-  </div><div id="engineer" class="card float-left m-4" style="width: 18rem;">
-    <div class="card-body bg-info text-white rounded">
-      <h5 class="card-title">hannah</h5>
-      <p class="card-text"><span><i class="fab fa-github p-2"></i></span>Engineer</p>
-    </div>
-    <ul class="list-group list-group-flush p-4">
-      <li class="list-group-item">ID:<span class = "text-primary"> 4566</span></li>
-      <li class="list-group-item">Email:<span class = "text-primary"> email@hannah</span></li>
-      <li class="list-group-item">GitHub User ID:<span class = "text-primary"> user3399</span></li>
+      <li class="list-group-item">ID:<span class = "text-primary"> 33</span></li>
+      <li class="list-group-item">Email:<span class = "text-primary"> email@333</span></li>
+      <li class="list-group-item">GitHub User ID:<span class = "text-primary"> user333</span></li>
     </ul>
     </div>
   </div>
